--- a/application/pom.xml
+++ b/application/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cool.william</groupId>
-    <artifactId>frontend-application</artifactId>
+    <groupId>cool.william.frontend</groupId>
+    <artifactId>application</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>frontend-application</name>
     <packaging>jar</packaging>
 
     <parent>
@@ -24,9 +23,9 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
         <dependency>
-            <groupId>cool.william</groupId>
-            <artifactId>spring-boot-index-controller-livereload-library</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>cool.william.frontend</groupId>
+            <artifactId>spring-boot-livereload-index-controller</artifactId>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 
