--- a/application/pom.xml
+++ b/application/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>cool.william.frontend</groupId>
             <artifactId>spring-boot-livereload-index-controller</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
